zeampl/parser/generated/ZeamplParser.py
# Generated from /Users/npohilets/compiler-peer-group/zeampl/parser/Zeampl.g4 by ANTLR 4.5.3
# encoding: utf-8
from antlr4 import *
from io import StringIO



class ZeamplParser ( Parser ):

    grammarFileName = "Zeampl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'var'", "'='", "';'", "'func'", "'init'", 
                     "'('", "')'", "','", "'ID'", "'type_expr'", "'class'", 
                     "'{'", "'}'", "'int'", "'bool'", "'['", "']'", "'+='", 
                     "'-='", "'~='", "'*='", "'/='", "'%='", "'&='", "'|='", 
                     "'^='", "'<<='", "'>>='", "'if'", "'elif'", "'else'", 
                     "'while'", "'for'", "'in'", "'return'", "'break'", 
                     "'continue'", "'=='", "'!='", "'<'", "'>'", "'>='", 
                     "'<='", "'+'", "'-'", "'|'", "'^'", "'*'", "'/'", "'%'", 
                     "'&'", "'<<'", "'>>'", "'!'", "'.'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "ID", "INT", "BOOL", "STRING", "UNTERMINATED_STRING" ]

    RULE_module = 0
    RULE_decl = 1
    RULE_varDecl = 2
    RULE_funcDecl = 3
    RULE_argList = 4
    RULE_arg = 5
    RULE_typeDecl = 6
    RULE_classDecl = 7
    RULE_type_expr = 8
    RULE_list_type = 9
    RULE_tuple_type = 10
    RULE_statement = 11
    RULE_block = 12
    RULE_exprStmt = 13
    RULE_assign_op = 14
    RULE_ifStmt = 15
    RULE_whileStmt = 16
    RULE_forStmt = 17
    RULE_returnStmt = 18
    RULE_breakStmt = 19
    RULE_continueStmt = 20
    RULE_expr = 21
    RULE_expr5 = 22
    RULE_expr5op = 23
    RULE_expr4 = 24
    RULE_expr4op = 25
    RULE_expr3 = 26
    RULE_expr3op = 27
    RULE_expr2 = 28
    RULE_expr2op = 29
    RULE_expr1 = 30
    RULE_expr0 = 31
    RULE_literal = 32
    RULE_intLiteral = 33
    RULE_boolLiteral = 34
    RULE_stringLiteral = 35
    RULE_tupleLiteral = 36
    RULE_listLiteral = 37

    ruleNames =  [ "module", "decl", "varDecl", "funcDecl", "argList", "arg", 
                   "typeDecl", "classDecl", "type_expr", "list_type", "tuple_type", 
                   "statement", "block", "exprStmt", "assign_op", "ifStmt", 
                   "whileStmt", "forStmt", "returnStmt", "breakStmt", "continueStmt", 
                   "expr", "expr5", "expr5op", "expr4", "expr4op", "expr3", 
                   "expr3op", "expr2", "expr2op", "expr1", "expr0", "literal", 
                   "intLiteral", "boolLiteral", "stringLiteral", "tupleLiteral", 
                   "listLiteral" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    ID=56
    INT=57
    BOOL=58
    STRING=59
    UNTERMINATED_STRING=60

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.5.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ModuleContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ZeamplParser.DeclContext)
            else:
                return self.getTypedRuleContext(ZeamplParser.DeclContext,i)


        def getRuleIndex(self):
            return ZeamplParser.RULE_module

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModule" ):
                return visitor.visitModule(self)
            else:
                return visitor.visitChildren(self)




    def module(self):

        localctx = ZeamplParser.ModuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_module)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ZeamplParser.T__0) | (1 << ZeamplParser.T__3) | (1 << ZeamplParser.T__4) | (1 << ZeamplParser.T__9) | (1 << ZeamplParser.T__10))) != 0):
                self.state = 76
                self.decl()
                self.state = 81
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self):
            return self.getTypedRuleContext(ZeamplParser.VarDeclContext,0)


        def funcDecl(self):
            return self.getTypedRuleContext(ZeamplParser.FuncDeclContext,0)


        def typeDecl(self):
            return self.getTypedRuleContext(ZeamplParser.TypeDeclContext,0)


        def classDecl(self):
            return self.getTypedRuleContext(ZeamplParser.ClassDeclContext,0)


        def getRuleIndex(self):
            return ZeamplParser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = ZeamplParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl)
        try:
            self.state = 86
            token = self._input.LA(1)
            if token in [ZeamplParser.T__0]:
                self.enterOuterAlt(localctx, 1)
                self.state = 82
                self.varDecl()

            elif token in [ZeamplParser.T__3, ZeamplParser.T__4]:
                self.enterOuterAlt(localctx, 2)
                self.state = 83
                self.funcDecl()

            elif token in [ZeamplParser.T__9]:
                self.enterOuterAlt(localctx, 3)
                self.state = 84
                self.typeDecl()

            elif token in [ZeamplParser.T__10]:
                self.enterOuterAlt(localctx, 4)
                self.state = 85
                self.classDecl()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class VarDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ZeamplParser.ID, 0)

        def type_expr(self):
            return self.getTypedRuleContext(ZeamplParser.Type_exprContext,0)


        def expr(self):
            return self.getTypedRuleContext(ZeamplParser.ExprContext,0)


        def getRuleIndex(self):
            return ZeamplParser.RULE_varDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecl" ):
                return visitor.visitVarDecl(self)
            else:
                return visitor.visitChildren(self)




    def varDecl(self):

        localctx = ZeamplParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_varDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(ZeamplParser.T__0)
            self.state = 89
            self.match(ZeamplParser.ID)
            self.state = 90
            self.type_expr()
            self.state = 93
            _la = self._input.LA(1)
            if _la==ZeamplParser.T__1:
                self.state = 91
                self.match(ZeamplParser.T__1)
                self.state = 92
                self.expr()


            self.state = 95
            self.match(ZeamplParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FuncDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(ZeamplParser.BlockContext,0)


        def ID(self):
            return self.getToken(ZeamplParser.ID, 0)

        def argList(self):
            return self.getTypedRuleContext(ZeamplParser.ArgListContext,0)


        def type_expr(self):
            return self.getTypedRuleContext(ZeamplParser.Type_exprContext,0)


        def getRuleIndex(self):
            return ZeamplParser.RULE_funcDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDecl" ):
                return visitor.visitFuncDecl(self)
            else:
                return visitor.visitChildren(self)




    def funcDecl(self):

        localctx = ZeamplParser.FuncDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_funcDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            token = self._input.LA(1)
            if token in [ZeamplParser.T__3]:
                self.state = 97
                self.match(ZeamplParser.T__3)
                self.state = 98
                self.match(ZeamplParser.ID)

            elif token in [ZeamplParser.T__4]:
                self.state = 99
                self.match(ZeamplParser.T__4)

            else:
                raise NoViableAltException(self)

            self.state = 102
            self.match(ZeamplParser.T__5)
            self.state = 104
            _la = self._input.LA(1)
            if _la==ZeamplParser.T__8:
                self.state = 103
                self.argList()


            self.state = 106
            self.match(ZeamplParser.T__6)
            self.state = 108
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ZeamplParser.T__5) | (1 << ZeamplParser.T__13) | (1 << ZeamplParser.T__14) | (1 << ZeamplParser.T__15))) != 0):
                self.state = 107
                self.type_expr()


            self.state = 110
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArgListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arg(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ZeamplParser.ArgContext)
            else:
                return self.getTypedRuleContext(ZeamplParser.ArgContext,i)


        def getRuleIndex(self):
            return ZeamplParser.RULE_argList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgList" ):
                return visitor.visitArgList(self)
            else:
                return visitor.visitChildren(self)




    def argList(self):

        localctx = ZeamplParser.ArgListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_argList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.arg()
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==ZeamplParser.T__7:
                self.state = 113
                self.match(ZeamplParser.T__7)
                self.state = 114
                self.arg()
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_expr(self):
            return self.getTypedRuleContext(ZeamplParser.Type_exprContext,0)


        def getRuleIndex(self):
            return ZeamplParser.RULE_arg

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArg" ):
                return visitor.visitArg(self)
            else:
                return visitor.visitChildren(self)




    def arg(self):

        localctx = ZeamplParser.ArgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_arg)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(ZeamplParser.T__8)
            self.state = 121
            self.type_expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TypeDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ZeamplParser.ID, 0)

        def type_expr(self):
            return self.getTypedRuleContext(ZeamplParser.Type_exprContext,0)


        def getRuleIndex(self):
            return ZeamplParser.RULE_typeDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypeDecl" ):
                return visitor.visitTypeDecl(self)
            else:
                return visitor.visitChildren(self)




    def typeDecl(self):

        localctx = ZeamplParser.TypeDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_typeDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(ZeamplParser.T__9)
            self.state = 124
            self.match(ZeamplParser.ID)
            self.state = 125
            self.match(ZeamplParser.T__1)
            self.state = 126
            self.type_expr()
            self.state = 127
            self.match(ZeamplParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ClassDeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ZeamplParser.ID, 0)

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ZeamplParser.DeclContext)
            else:
                return self.getTypedRuleContext(ZeamplParser.DeclContext,i)


        def getRuleIndex(self):
            return ZeamplParser.RULE_classDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDecl" ):
                return visitor.visitClassDecl(self)
            else:
                return visitor.visitChildren(self)




    def classDecl(self):

        localctx = ZeamplParser.ClassDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_classDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(ZeamplParser.T__10)
            self.state = 130
            self.match(ZeamplParser.ID)
            self.state = 131
            self.match(ZeamplParser.T__11)
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ZeamplParser.T__0) | (1 << ZeamplParser.T__3) | (1 << ZeamplParser.T__4) | (1 << ZeamplParser.T__9) | (1 << ZeamplParser.T__10))) != 0):
                self.state = 132
                self.decl()
                self.state = 137
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 138
            self.match(ZeamplParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Type_exprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def list_type(self):
            return self.getTypedRuleContext(ZeamplParser.List_typeContext,0)


        def tuple_type(self):
            return self.getTypedRuleContext(ZeamplParser.Tuple_typeContext,0)


        def getRuleIndex(self):
            return ZeamplParser.RULE_type_expr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType_expr" ):
                return visitor.visitType_expr(self)
            else:
                return visitor.visitChildren(self)




    def type_expr(self):

        localctx = ZeamplParser.Type_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_type_expr)
        try:
            self.state = 144
            token = self._input.LA(1)
            if token in [ZeamplParser.T__13]:
                self.enterOuterAlt(localctx, 1)
                self.state = 140
                self.match(ZeamplParser.T__13)

            elif token in [ZeamplParser.T__14]:
                self.enterOuterAlt(localctx, 2)
                self.state = 141
                self.match(ZeamplParser.T__14)

            elif token in [ZeamplParser.T__15]:
                self.enterOuterAlt(localctx, 3)
                self.state = 142
                self.list_type()

            elif token in [ZeamplParser.T__5]:
                self.enterOuterAlt(localctx, 4)
                self.state = 143
                self.tuple_type()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class List_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_expr(self):
            return self.getTypedRuleContext(ZeamplParser.Type_exprContext,0)


        def getRuleIndex(self):
            return ZeamplParser.RULE_list_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList_type" ):
                return visitor.visitList_type(self)
            else:
                return visitor.visitChildren(self)




    def list_type(self):

        localctx = ZeamplParser.List_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_list_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(ZeamplParser.T__15)
            self.state = 147
            self.type_expr()
            self.state = 148
            self.match(ZeamplParser.T__16)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Tuple_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ZeamplParser.Type_exprContext)
            else:
                return self.getTypedRuleContext(ZeamplParser.Type_exprContext,i)


        def getRuleIndex(self):
            return ZeamplParser.RULE_tuple_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTuple_type" ):
                return visitor.visitTuple_type(self)
            else:
                return visitor.visitChildren(self)




    def tuple_type(self):

        localctx = ZeamplParser.Tuple_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_tuple_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(ZeamplParser.T__5)
            self.state = 163
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ZeamplParser.T__5) | (1 << ZeamplParser.T__13) | (1 << ZeamplParser.T__14) | (1 << ZeamplParser.T__15))) != 0):
                self.state = 151
                self.type_expr()
                self.state = 152
                self.match(ZeamplParser.T__7)
                self.state = 161
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ZeamplParser.T__5) | (1 << ZeamplParser.T__13) | (1 << ZeamplParser.T__14) | (1 << ZeamplParser.T__15))) != 0):
                    self.state = 153
                    self.type_expr()
                    self.state = 158
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==ZeamplParser.T__7:
                        self.state = 154
                        self.match(ZeamplParser.T__7)
                        self.state = 155
                        self.type_expr()
                        self.state = 160
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)





            self.state = 165
            self.match(ZeamplParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self):
            return self.getTypedRuleContext(ZeamplParser.BlockContext,0)


        def exprStmt(self):
            return self.getTypedRuleContext(ZeamplParser.ExprStmtContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(ZeamplParser.IfStmtContext,0)


        def whileStmt(self):
            return self.getTypedRuleContext(ZeamplParser.WhileStmtContext,0)


        def forStmt(self):
            return self.getTypedRuleContext(ZeamplParser.ForStmtContext,0)


        def returnStmt(self):
            return self.getTypedRuleContext(ZeamplParser.ReturnStmtContext,0)


        def breakStmt(self):
            return self.getTypedRuleContext(ZeamplParser.BreakStmtContext,0)


        def continueStmt(self):
            return self.getTypedRuleContext(ZeamplParser.ContinueStmtContext,0)


        def getRuleIndex(self):
            return ZeamplParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = ZeamplParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_statement)
        try:
            self.state = 175
            token = self._input.LA(1)
            if token in [ZeamplParser.T__11]:
                self.enterOuterAlt(localctx, 1)
                self.state = 167
                self.block()

            elif token in [ZeamplParser.T__5, ZeamplParser.T__15, ZeamplParser.T__43, ZeamplParser.T__44, ZeamplParser.T__53, ZeamplParser.ID, ZeamplParser.INT, ZeamplParser.BOOL, ZeamplParser.STRING]:
                self.enterOuterAlt(localctx, 2)
                self.state = 168
                self.exprStmt()

            elif token in [ZeamplParser.T__28]:
                self.enterOuterAlt(localctx, 3)
                self.state = 169
                self.ifStmt()

            elif token in [ZeamplParser.T__31]:
                self.enterOuterAlt(localctx, 4)
                self.state = 170
                self.whileStmt()

            elif token in [ZeamplParser.T__32]:
                self.enterOuterAlt(localctx, 5)
                self.state = 171
                self.forStmt()

            elif token in [ZeamplParser.T__34]:
                self.enterOuterAlt(localctx, 6)
                self.state = 172
                self.returnStmt()

            elif token in [ZeamplParser.T__35]:
                self.enterOuterAlt(localctx, 7)
                self.state = 173
                self.breakStmt()

            elif token in [ZeamplParser.T__36]:
                self.enterOuterAlt(localctx, 8)
                self.state = 174
                self.continueStmt()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ZeamplParser.StatementContext)
            else:
                return self.getTypedRuleContext(ZeamplParser.StatementContext,i)


        def getRuleIndex(self):
            return ZeamplParser.RULE_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = ZeamplParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 177
            self.match(ZeamplParser.T__11)
            self.state = 181
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ZeamplParser.T__5) | (1 << ZeamplParser.T__11) | (1 << ZeamplParser.T__15) | (1 << ZeamplParser.T__28) | (1 << ZeamplParser.T__31) | (1 << ZeamplParser.T__32) | (1 << ZeamplParser.T__34) | (1 << ZeamplParser.T__35) | (1 << ZeamplParser.T__36) | (1 << ZeamplParser.T__43) | (1 << ZeamplParser.T__44) | (1 << ZeamplParser.T__53) | (1 << ZeamplParser.ID) | (1 << ZeamplParser.INT) | (1 << ZeamplParser.BOOL) | (1 << ZeamplParser.STRING))) != 0):
                self.state = 178
                self.statement()
                self.state = 183
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 184
            self.match(ZeamplParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExprStmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ZeamplParser.ExprContext)
            else:
                return self.getTypedRuleContext(ZeamplParser.ExprContext,i)


        def assign_op(self):
            return self.getTypedRuleContext(ZeamplParser.Assign_opContext,0)


        def getRuleIndex(self):
            return ZeamplParser.RULE_exprStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprStmt" ):
                return visitor.visitExprStmt(self)
            else:
                return visitor.visitChildren(self)




    def exprStmt(self):

        localctx = ZeamplParser.ExprStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_exprStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 186
            self.expr()
            self.state = 190
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << ZeamplParser.T__1) | (1 << ZeamplParser.T__17) | (1 << ZeamplParser.T__18) | (1 << ZeamplParser.T__19) | (1 << ZeamplParser.T__20) | (1 << ZeamplParser.T__21) | (1 << ZeamplParser.T__22) | (1 << ZeamplParser.T__23) | (1 << ZeamplParser.T__24) | (1 << ZeamplParser.T__25) | (1 << ZeamplParser.T__26) | (1 << ZeamplParser.T__27))) != 0):
                self.state = 187
                self.assign_op()
                self.state = 188
                self.expr()


            self.state = 192
            self.match(ZeamplParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Assign_opContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return ZeamplParser.RULE_assign_op

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign_op" ):
                return visitor.visitAssign_op(self)
            else:
                return visitor.visitChildren(self)




    def assign_op(self):
